fix bug: a gap appear between footer and paginator

--- a/source/css/article.css
+++ b/source/css/article.css
@@ -150,6 +150,5 @@ blockquote span{
 /**********分页************/
 .article-navigation {
     border-top: 1px solid #E6E6E6;
-    margin-bottom: 20px;
     padding-bottom: 80px;
 }
