--- a/source/css/main.css
+++ b/source/css/main.css
@@ -401,6 +401,7 @@ footer {
     height: 100px;
     font-size: 14px;
     color: #717171;
+    margin: 0 !important;
 }
 
 footer a {
